--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Список товаров</title>
 </head>
 <body>
-<div class="container-fluid">
+<div id = "app" class="container-fluid">
     <h1>Список товаров</h1>
     <div class="row">
         <div class="col-12">
@@ -61,57 +61,36 @@
         Найдено 2 товара
     </div>
     <div class="row no-gutters">
-        <div class="col-6 pr-2">
+        <div v-for = "product in products" class="col-6 pr-2">
             <div class="card text-center border-0 shadow-sm mb-3 bg-white rounded-lg">
                 <img class="card-img-top"
                      src="https://media.istockphoto.com/photos/male-coat-isolated-on-the-white-picture-id163208487">
                 <div class="card-body p-1 m-1">
-                    <h5 class="card-title mb-0">Название</h5>
+                    <h5 class="card-title mb-0">{{product.name}}</h5>
                     <div class="card-text">
                         <div>
                             <small class="card-text text-muted">
-                                Категория
+                                {{product.category}}
                             </small>
                         </div>
                         <div>
-                            <del>5 900</del>
-                            <strong>3 790 ₽</strong>
-                        </div>
-                    </div>
-                    <a href="#" class="btn btn-primary stretched-link m-1">Купить</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-6 pl-2">
-            <div class="card text-center border-0 shadow-sm mb-3 bg-white rounded-lg">
-                <img class="card-img-top"
-                     src="https://media.istockphoto.com/photos/red-womans-sports-jacket-picture-id520887025">
-                <div class="card-body p-1 m-1">
-                    <h5 class="card-title mb-0">Название</h5>
-                    <div class="card-text">
-                        <div>
-                            <small class="card-text text-muted">
-                                Категория
-                            </small>
-                        </div>
-                        <div>
-                            <del>5 900</del>
-                            <strong>3 790 ₽</strong>
+                            <del>{{product.oldPrice}}</del>
+                            <strong>{{product.price}} ₽</strong>
                         </div>
                         <div class="alert alert-dark p-0 m-0" role="alert">
                             <div>
-                                <small>
-                                    <strong>Бренд</strong> Super
+                                <small>в
+                                    <strong>Бренд</strong> {{product.brand}}
                                 </small>
                             </div>
                             <div>
                                 <small>
-                                    <strong>Размер</strong> 34
+                                    <strong>Размер</strong> {{product.size}}
                                 </small>
                             </div>
                             <div>
                                 <small>
-                                    <strong>Цвет</strong> красный
+                                    <strong>Цвет</strong> {{product.color}}
                                 </small>
                             </div>
                         </div>
@@ -120,6 +99,44 @@
                 </div>
             </div>
         </div>
+<!--        <div class="col-6 pl-2">-->
+<!--            <div class="card text-center border-0 shadow-sm mb-3 bg-white rounded-lg">-->
+<!--                <img class="card-img-top"-->
+<!--                     src="https://media.istockphoto.com/photos/red-womans-sports-jacket-picture-id520887025">-->
+<!--                <div class="card-body p-1 m-1">-->
+<!--                    <h5 class="card-title mb-0">Название</h5>-->
+<!--                    <div class="card-text">-->
+<!--                        <div>-->
+<!--                            <small class="card-text text-muted">-->
+<!--                                Категория-->
+<!--                            </small>-->
+<!--                        </div>-->
+<!--                        <div>-->
+<!--                            <del>5 900</del>-->
+<!--                            <strong>3 790 ₽</strong>-->
+<!--                        </div>-->
+<!--                        <div class="alert alert-dark p-0 m-0" role="alert">-->
+<!--                            <div>-->
+<!--                                <small>-->
+<!--                                    <strong>Бренд</strong> Super-->
+<!--                                </small>-->
+<!--                            </div>-->
+<!--                            <div>-->
+<!--                                <small>-->
+<!--                                    <strong>Размер</strong> 34-->
+<!--                                </small>-->
+<!--                            </div>-->
+<!--                            <div>-->
+<!--                                <small>-->
+<!--                                    <strong>Цвет</strong> красный-->
+<!--                                </small>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <a href="#" class="btn btn-primary stretched-link m-1">Купить</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </div>
 
@@ -129,6 +146,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
