Отображено количество товаров, подходящих под фильтрацию.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="alert alert-light" role="alert">
-        Найдено 2 товара
+        Найдено {{filteredProducts.length}} товара
     </div>
     <div class="row no-gutters">
         <div v-for = "product in filteredProducts" class="col-6 pr-2">
