Реализовать переключение карточки товара из обычного вида в расширенный и обратно при клике на любую область карточки товара. При клике на кнопку «Купить» открывать alert окно с текстом по шаблону «куплен товар <НАЗВАНИЕ_ТОВАРА>». Кнопка «сбросить» не активна, если ни одного фильтра не выбрано.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 </select>
                             </div>
                             <div class="text-right">
-                                <a href="#" class="btn btn-sm btn-secondary">Сбросить</a>
+                                <button v-on:click = "cleaning" :disabled = "!isCleaning" class="btn btn-sm btn-secondary">Сбросить</button>
                             </div>
                         </form>
                     </div>
@@ -62,81 +62,9 @@
     </div>
     <div class="row no-gutters">
         <div v-for = "product in filteredProducts" class="col-6 pr-2">
-            <div class="card text-center border-0 shadow-sm mb-3 bg-white rounded-lg">
-                <img class="card-img-top"
-                     src="https://media.istockphoto.com/photos/male-coat-isolated-on-the-white-picture-id163208487">
-                <div class="card-body p-1 m-1">
-                    <h5 class="card-title mb-0">{{product.name}}</h5>
-                    <div class="card-text">
-                        <div>
-                            <small class="card-text text-muted">
-                                {{product.category}}
-                            </small>
-                        </div>
-                        <div>
-                            <del>{{product.oldPrice}}</del>
-                            <strong>{{product.price}} ₽</strong>
-                        </div>
-                        <div class="alert alert-dark p-0 m-0" role="alert">
-                            <div>
-                                <small>в
-                                    <strong>Бренд</strong> {{product.brand}}
-                                </small>
-                            </div>
-                            <div>
-                                <small>
-                                    <strong>Размер</strong> {{product.size}}
-                                </small>
-                            </div>
-                            <div>
-                                <small>
-                                    <strong>Цвет</strong> {{product.color}}
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#" class="btn btn-primary stretched-link m-1">Купить</a>
-                </div>
-            </div>
+            <one-product :product="product"></one-product>
         </div>
-<!--        <div class="col-6 pl-2">-->
-<!--            <div class="card text-center border-0 shadow-sm mb-3 bg-white rounded-lg">-->
-<!--                <img class="card-img-top"-->
-<!--                     src="https://media.istockphoto.com/photos/red-womans-sports-jacket-picture-id520887025">-->
-<!--                <div class="card-body p-1 m-1">-->
-<!--                    <h5 class="card-title mb-0">Название</h5>-->
-<!--                    <div class="card-text">-->
-<!--                        <div>-->
-<!--                            <small class="card-text text-muted">-->
-<!--                                Категория-->
-<!--                            </small>-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <del>5 900</del>-->
-<!--                            <strong>3 790 ₽</strong>-->
-<!--                        </div>-->
-<!--                        <div class="alert alert-dark p-0 m-0" role="alert">-->
-<!--                            <div>-->
-<!--                                <small>-->
-<!--                                    <strong>Бренд</strong> Super-->
-<!--                                </small>-->
-<!--                            </div>-->
-<!--                            <div>-->
-<!--                                <small>-->
-<!--                                    <strong>Размер</strong> 34-->
-<!--                                </small>-->
-<!--                            </div>-->
-<!--                            <div>-->
-<!--                                <small>-->
-<!--                                    <strong>Цвет</strong> красный-->
-<!--                                </small>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <a href="#" class="btn btn-primary stretched-link m-1">Купить</a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+
     </div>
 </div>
 
